# forest

./: .gitignore  CMakeLists.txt  README.CMAKE.ECLIPSE  README.md  eclipse-forest-format.xml  foresttodo.html  genindex.html  git_add_doc.sh  index.html  info.html  install.html  search.html  searchindex.js  sebas.README.CMAKE.ECLIPSE.sh
mylib/: CMakeLists.txt
mylib/include/algebra/: eigen_fission_density.h  eigen_prob.h  eigen_prob_factory.h  eigen_solver.h  eigen_solver_slepc.h  eigen_standard.h  eq_diffusion.h  eq_factory.h  eq_transport.h  equation.h  equation_fwd.h  forest_algebra.h  forest_vector.h  sn_vector.h  sn_vector_fwd.h  solver_eq.h
mylib/include/angle/: directions_to_moments.h  forest_angle.h  generate_gauss_chebyshev.h  generate_gauss_legendre.h  moment_indexer.h  moments_to_directions.h  quadrature_base.h  quadrature_base_fwd.h  quadrature_chebyshev_legendre.h  quadrature_factory.h  quadrature_gauss_chebyshev.h  quadrature_gausslegendre.h  quadrature_levelsymmetric_type1.h  quadrature_levelsymmetric_type2.h  spherical_harmonics.h
mylib/include/geometry/: path_to_gridgenerator_dealii.h  prob_geom.h  prob_geom_fwd.h  real_assembly.h  real_core.h  real_pin.h
mylib/include/input/: input.h  input_fwd.h  input_geom.h  input_mat.h  input_settings.h
mylib/include/neutronics/: boundary_values_factory.h  boundaryvalues.h  diff_factory.h  diff_op.h  diff_op_matrix_built.h  diff_op_matrix_free.h  downstream_new.h  extract_bv.h  fission_source.h  fission_source_factory.h  fission_source_matrix_built.h  fission_source_matrix_free.h  fission_spectrum.h  fission_spectrum_factory.h  fission_spectrum_matrix_built.h  fission_spectrum_matrix_free.h  forest_neutronics.h  hom_data.h  homogenization.h  manager.h  matrix_free_integrator.h  matrix_integrator.h  neutronicmodule.h  path_to_intergridmap_dealii.h  scattering_factory.h  scattering_matrix_built.h  scattering_matrix_free.h  scattering_source.h  state.h  state_fwd.h  trans_bc.h  trans_factory.h  trans_op.h  trans_op_matrix_built.h  trans_op_matrix_free.h  trans_op_mf_pre.h
mylib/include/output/: forest_post_processing.h
mylib/include/utils/: cmdoption.h  constants.h  forest_utils.h  forest_utils_base.h  forest_utils_dealii.h  forest_utils_logstream.h  forest_utils_memory.h  forest_utils_timer.h  forest_vector.templates.h  forest_vector.templates.h.backup
mylib/python/examples/: executer.sh
mylib/python/examples/1d1g_heter/: 1d1g_heter.py
mylib/python/examples/1d1g_homog/: 1d1g_homog.py  1d1g_homog_10cm.py  1d1g_homog_2cm.py
mylib/python/examples/1d2g_georgiatech/: 1d2g_georgiatech.py
mylib/python/examples/1d2g_homog/: 1d2g_homog.py
mylib/python/examples/1d2g_periodic/: 1d2g_periodic.py  plotPeriodicHeterogeneous1D.py  plotPeriodicHomogeneous1D.py
mylib/python/examples/1d7g_c5g7_heter/: 1dg7_c5g7_heter.py  1dg7_c5g7_heter_hom.py
mylib/python/examples/1d7g_c5g7_noupscattering/: c5g7.py  get_c5g7_materials.py  postprocess.py  sweepsVsTime.py
mylib/python/examples/2d1g_heter/: 2d1g_heter.py  2d1g_heter_refl.py
mylib/python/examples/2d1g_homog/: 2d1g_homog.py  3d1g_homog.py
mylib/python/examples/2d2g_MoxBenchmark/: 2d2g_MoxBenchmark.py  paraview
mylib/python/examples/2d2g_c4/: 2d2g_c4.py
mylib/python/examples/2d3g_lattice/: 2d3g_lattice.py
mylib/python/examples/2d3g_minicore/: 2d3g_minicore.py
mylib/python/examples/2d3g_simplifiedBWR/: 2d3g_simplifiedBWR_Kr1.py  2d3g_simplifiedBWR_Kr1_FD.py  2d3g_simplifiedBWR_Kr4.py  2d3g_simplifiedBWR_Kr4_FD.py  2d3g_simplifiedBWR_PI.py  2d3g_simplifiedBWR_PI_FD.py  2d3g_simplifiedBWR_grid.py  2d3g_simplifiedBWR_pins.py  postprocess.py
mylib/python/examples/2d7g_1x1pins/: 2d7g_1x1pins.py
mylib/python/examples/2d7g_2x2pins/: 2d7g_2x2pins.py
mylib/python/examples/2d7g_3x3pins/: 2d7g_3x3pins.py  2d7g_3x3pins_refl.py
mylib/python/prob/: geometry.py  materials.py  runforest.py  settings.py  utils.py  utils_ploting_mat.py  vtkparser1d.py  vtkreconstrution.py  xmltest
mylib/src/algebra/: eigen_fission_density.cc  eigen_prob_factory.cc  eigen_solver.cc  eigen_solver_slepc.cc  eigen_standard.cc  eq_diffusion.cc  eq_factory.cc  eq_transport.cc  forest_vector.cc  sn_vector.cc  solver_eq.cc
mylib/src/angle/: directions_to_moments.cc  moment_indexer.cc  moments_to_directions.cc  quadrature_base.cc  quadrature_chebyshev_legendre.cc  quadrature_factory.cc  quadrature_gauss_chebyshev.cc  quadrature_gausslegendre.cc  quadrature_levelsymmetric_type1.cc  quadrature_levelsymmetric_type2.cc  spherical_harmonics.cc
mylib/src/geometry/: path_to_gridgenerator_dealii.cc  prob_geom.cc  real_assembly.cc  real_core.cc  real_pin.cc
mylib/src/input/: input.cc  input_geom.cc  input_mat.cc  input_settings.cc
mylib/src/neutronics/: boundary_values_factory.cc  boundaryvalues.cc  diff_factory.cc  diff_op.cc  diff_op_matrix_built.cc  diff_op_matrix_free.cc  downstream_new.cc  extract_bv.cc  fission_source_factory.cc  fission_source_matrix_built.cc  fission_source_matrix_free.cc  fission_spectrum_factory.cc  fission_spectrum_matrix_built.cc  fission_spectrum_matrix_free.cc  hom_data.cc  homogenization.cc  neutronicmodule.cc  path_to_intergridmap_dealii.cc  scattering_factory.cc  scattering_matrix_built.cc  scattering_matrix_free.cc  scattering_source.cc  state.cc  trans_bc.cc  trans_factory.cc  trans_op.cc  trans_op_matrix_built.cc  trans_op_matrix_free.cc  trans_op_mf_pre.cc
mylib/src/output/: forest_post_processing.cc
mylib/src/utils/: cmdoption.cc  forest_utils_base.cc  forest_utils_dealii.cc  forest_utils_memory.cc  forest_utils_timer.cc
testing/: 2x2pins.sh  3x3pins.sh  3x3pinsrefl.sh  CMakeLists.txt  GeorgiaTech1D.sh  GeorgiaTech1DAss.sh  GeorgiaTech1DHomAss.sh  Periodic1d.sh  c5g7.sh  c5g71dAll.sh  c5g7_inner_uo2.sh  c5g7_mox.sh  c5g7_outer_uo2.sh  c5g7heter1d.sh  c5g7heter1dAss.sh  c5g7heter1dHom.sh  c5g7homog1d.sh  c5g7homog1dAss.sh  c5g7homog1dHom.sh  executer.sh  heter1d.sh  heter1drefl.sh  heter2d.sh  heter2drefl.sh  homog1d.sh  homog2d.sh  homog2g1d.sh  lattice2d.sh  main.cc  minicore2d.sh  pin2d.sh  pin3d.sh  simplifiedBWR2d_grid.sh  simplifiedBWR2d_pins.sh
(+2922 files in other folders)
